--- a/www/phpusa/internal/linked/css/baseStyle.css
+++ b/www/phpusa/internal/linked/css/baseStyle.css
@@ -146,6 +146,11 @@ div.errors ol {
 	border:1px solid #021157;	
 }
 
+.xLargeField {
+	width:250px;
+	border:1px solid #021157;	
+}
+
 /********************************************
 	END OF FORM FIELDS
 ********************************************/
@@ -154,24 +159,13 @@ div.errors ol {
 /********************************************
 	START OF REPORTS 
 ********************************************/
-.pageTitle {
-	width:98%;
-	background-color:#C4CDE7;
-	border:1px solid #021157;	
-	font-weight:bold;
-	text-transform:uppercase;
-	padding:5px;
-	margin-top:10px;
-	margin-bottom:10px;
-	clear:both;
-}
 
 .reportTableLeft {
 	width:47%;
 	float:left;
 	border:1px solid #021157;	
 	padding:5px;
-	margin:5px 0px 15px 25px;
+	margin:10px 0px 10px 25px;
 }
 
 .reportTableRight {
@@ -179,7 +173,7 @@ div.errors ol {
 	float:right;
 	border:1px solid #021157;	
 	padding:5px;
-	margin:5px 25px 15px 0px;
+	margin:10px 25px 10px 0px;
 }
 
 .reportTableLeft .title,
