EXITS - Flight Information - Flight Information by Intl. Rep. report added - Passing programID to get flight information specific for a program - Updating programID on all flight info records

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -204,6 +204,19 @@ div.errors ol {
 
 
 /********************************************
+	 REPORTS STYLE
+********************************************/
+table.nav_bar { 
+	font-size: 10px; 
+	background-color: #ffffe6; 
+	border: 1px solid e2efc7; 
+}
+/********************************************
+	 END OF REPORTS STYLE
+********************************************/
+
+
+/********************************************
 	 DEFAULT TABLE STYLE
 ********************************************/
 .defaultTableStyle {
