EXTRA - WAT - Cosmetics updates in the Intl. Representative Detail Page - Resolving issue when there is an error and form was not on EDIT mode

--- a/www/student-management/extra/internal/linked/css/baseStyle.css
+++ b/www/student-management/extra/internal/linked/css/baseStyle.css
@@ -113,6 +113,8 @@
 ********************************************/
 .editPage { 
 	display:none;
+	font-size: 10px; 	
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .hiddenField { 
