--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -199,6 +199,7 @@ div.pageMessages {
 	display:none;
 	margin: 5px auto 5px auto; 
 	padding: 5px 10px; 
+	text-align:center;
 	background-color: #c2d9e9;
 	border: #0069aa 1px solid; 
 	font-family: Arial, Helvetica, sans-serif;
@@ -221,6 +222,7 @@ div.pageMessages p em {
 	 ERROR MESSAGE
 ********************************************/
 div.errors { 
+	text-align:center;
     margin:0px auto 10px auto;
 	padding: 5px 10px; 
 	border: #FC6 1px solid; 
