--- a/www/student-management/extra/internal/linked/css/appSection.css
+++ b/www/student-management/extra/internal/linked/css/appSection.css
@@ -674,12 +674,13 @@ div.errorContainer p em {
 	font-weight: bold; 
 }
 
+
 /* Page Messages */
 div.pageMessages { 
 	display:none;
 	margin: 10px 0 10px 0; 
 	padding: 5px 10px; 
-	/* background-color: #c2d9e9; */
+	background-color:#c2d9e9;
 	border: #0069aa 1px solid; 
 	/* font-family: Arial, Helvetica, sans-serif; */
 }
