EXTRA - WAT - Adding previous participation info field to online application and candidate information page - Resolving issue when setting field to disabled, changed it to set field to readOnly instead

--- a/www/student-management/extra/internal/linked/css/baseStyle.css
+++ b/www/student-management/extra/internal/linked/css/baseStyle.css
@@ -96,9 +96,16 @@
 	border:1px solid #999;	
 }
 
+.mediumTextArea {
+	height: 50px;
+	width : 260px;
+	margin-bottom: .5em;
+	border:1px solid #999;	
+}
+
 .largeTextArea {
 	height: 80px;
-	width : 250px;
+	width : 260px;
 	margin-bottom: .5em;
 	border:1px solid #999;	
 }
