EXTRA - WAT - Email Export Tool - Adding option to filter by Intl. Representatives - Updating the format on candidate information page - Support letter updated

--- a/www/student-management/extra/internal/style.css
+++ b/www/student-management/extra/internal/style.css
@@ -21,7 +21,9 @@ a:active {
 }
 .style1 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px; }
+	font-size: 10px; 
+	vertical-align:top;
+}
 .style2 {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 10px;
