EXITS - New Placement Management Added - Planning on releasing for production after 09/07/11 placement deadline. - Old management screen files will be removed later.

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -38,7 +38,6 @@
 .columnTitle {
 	font-weight:bold;	
 	vertical-align:top;
-	color:#F00;
 }
 
 .columTitleRight {
@@ -102,6 +101,13 @@
 	border:1px solid #999;	
 }
 
+.largeTextArea {
+	height: 60px;
+	width : 300px;
+	margin-bottom: .5em;
+	border:1px solid #999;	
+}
+
 .xLargeTextArea {
 	height: 80px;
 	width : 350px;
@@ -109,9 +115,28 @@
 	border:1px solid #999;	
 }
 
+.xxLargeTextArea {
+	height: 130px;
+	width : 450px;
+	margin-bottom: .5em;
+	border:1px solid #999;	
+}
+
 .formNote {
+	width:100%;
+	display:inline-table;
 	padding:2px 0 0 0;
 	margin:0 0 0 2px;
+	font-size:0.8em;
+}
+
+.formRequiredNote {
+	color:#F00;
+	width:100%;
+	display:inline-table;
+	padding:2px 0 0 0;
+	margin:0 0 0 2px;
+	font-weight:bold;
 	font-size:0.8em;
 }
 
@@ -141,8 +166,134 @@
 
 
 /********************************************
+	PLACEMENT MANAGEMENT
+********************************************/
+
+.placementMgmtInfo {
+	/* font-size:0.9em; */
+	background-color:#edeff4; 
+	margin-right:10px; 
+	padding:5px; 
+	min-height:80px;	
+}
+
+.placementMgmtInfo em {
+	font-weight:bold;
+	color:#F00;
+}
+
+.placementMgmtInfo span {
+	display:table;
+	margin-top:10px;
+	color:#3b5998;
+	font-weight:bold;
+	text-align:left;
+}
+
+.placementTopLinks {
+	font-weight:bold; 
+	letter-spacing:1px;
+	text-transform:uppercase; 
+}
+
+.placementMgmtLinks {
+	float:right;
+	font-size:0.8em;
+	font-weight:normal;	
+	padding:0px 10px 0px 0px;	
+}
+
+.placementMgmtLinks a {
+	font-weight:bold;
+}
+
+#actionButtons form {
+	display:inline;
+	margin:15px;
+}
+
+.singlePlacementAlert {
+	width:550;
+	height:55px;
+	border:#666;
+	background-color:#FF9797;
+	text-align:center;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
+	vertical-align:center;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.paperwork td {
+	height:2em;
+	border-bottom:1px solid #edeff4;	
+}
+
+.paperwork td p {
+	margin:0px;
+}
+
+.paperworkLeftColumn {
+	text-align:right; 
+	padding-right:10px;
+}
+
+/********************************************
+	END OF PLACEMENT MANAGEMENT
+********************************************/
+
+
+/********************************************
 	REPORTS
 ********************************************/
+
+/* Facebook Style */
+.reportCenterTitle {
+	color:#FFFFFF;
+	font-weight:bold;
+	text-align:center;	
+	background-color:#3b5998; 
+}
+
+.reportCenterTitle a {
+	color:#FFFFFF;
+	font-weight:bold;	
+}
+
+.reportTitleLeftClean {
+	padding:5px;
+	color:#3b5998;
+	font-weight:bold;
+	text-align:left;
+}
+
+.fieldCenterTitle {
+	padding:5px;
+	display:block;
+	margin-bottom:3px;
+	color:#3b5998;
+	font-weight:bold;
+	text-align:center;
+}
+
+.reportTitleLeftClean em {
+	color:#F00;
+	font-weight:bold;
+}
+
+.reportTitleLeftClean label {
+	font-size:1em;
+	color:#3b5998;
+	font-weight:bold;
+	text-align:left;
+}
+
+.reportTitleLeftClean td {
+	padding-left:10px;
+}
+
+/* Green */
 .reportTitle {
 	font-weight:bold;
 	text-align:center;	
