--- a/www/student-management/nsmg/smg.css
+++ b/www/student-management/nsmg/smg.css
@@ -7,7 +7,9 @@ table,tr,td{
   
 table.nav_bar { font-size: 12px; background-color: #ffffff; border: 1px solid #2E5872; }
 
-.section {border-top: 1px solid #c6c6c6;; border-right: 2px solid #c6c6c6;border-left: 2px solid #c6c6c6;border-bottom: 0px; background: #ffffff;}
+.section {border-top: 1px solid #c6c6c6; border-right: 2px solid #c6c6c6;border-left: 2px solid #c6c6c6;border-bottom: 0px; background: #ffffff;}
+
+.sectionBorderOnly {border-right: 2px solid #c6c6c6; border-left: 2px solid #c6c6c6; background: #ffffff;}
 
 a:link, a:visited{
 	color: #5E748C;
