--- a/www/iseusa/css/baseStyle.css
+++ b/www/iseusa/css/baseStyle.css
@@ -63,6 +63,13 @@ div.errorContainer p em {
 	font-weight: bold; 
 }
 
+div.errors ul,
+div.errorContainer ul { 	
+	text-align:left;
+	list-style-type: none;
+}
+
+
 /************************************************************************************
 
 Page Messages
