EXTRA - WAT - Online Application - Adding notes to the English Assessment Page

--- a/www/student-management/extra/internal/linked/css/appSection.css
+++ b/www/student-management/extra/internal/linked/css/appSection.css
@@ -753,7 +753,16 @@ div.form-container-noBorder p.note {
 	margin:0px;
 	margin-left: 210px; 
 	font-size: 90%; 
-	color: #333; 
+	color:#666;
+}
+
+div.form-container p.paddingNote,
+div.form-container-noBorder p.paddingNote { 
+	margin:0px;
+	margin-left: 210px; 
+	font-size: 90%; 
+	color:#666;
+	padding:2px;
 }
 
 div.form-container p.note em,
