--- a/www/student-management/nsmg/tours/trips.css
+++ b/www/student-management/nsmg/tours/trips.css
@@ -1,12 +1,35 @@
 .yellowHighlight{
 	background-color:#FF9;
 }
+
 .greyText{
 	color:#999;
 	font-weight:bold;
 }
-.bigLabel{font-size:14px;
-			
+
+.greyTextBlock{
+	color:#999;
+	font-weight:bold;
+	padding-bottom:3px;
+	display:block;
+}
+
+.greyTextRight{
+	color:#999;
+	text-align:right;
+	padding-right:10px;
+	font-weight:bold;
+	vertical-align:top;
+}
+
+.bigLabel{
+	font-size:14px;
+}
+
+.bigLabelBlock{
+	font-size:14px;
+	margin-bottom:15px;
+	display:block;
 }
 
 .button {
