--- a/www/csb-usa/linked/css/baseStyle.css
+++ b/www/csb-usa/linked/css/baseStyle.css
@@ -32,7 +32,9 @@ div.pageMessages p em {
 	 ERROR MESSAGE
 ********************************************/
 div.errors { 
-	text-align:left;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size:13px;
+	text-align:center;
     margin:0px auto 10px auto;
 	padding: 5px 10px; 
 	border: #FC6 1px solid; 
@@ -57,8 +59,12 @@ div.errorContainer p em {
 }
 
 div.errors ol {
-	list-style: none;
-	text-indent:-3em;
+	text-align:left;
+}
+
+div.errors ol li {
+	padding:2px 10px 2px 5px;
+	margin-left:5px;
 }
 /********************************************
 	 END OF ERROR MESSAGE
