EXITS - New Placement Management - Log: Most recent at top - Placement History: Original, 2nd, 3rd.. - Set relocation to "yes" if student has arrived

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -207,6 +207,10 @@
 	font-weight:bold;
 }
 
+.placementMgmtChanged {
+	background-color:#FF6;	
+}
+
 #actionButtons form {
 	display:inline;
 	margin:15px;
