EXITS - Compliance - Updating both reports, filtering out placements that had not been approved - Insert alert and attention color codes - Including cancelled students

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -257,6 +257,15 @@
 	margin-top:10px;
 }
 
+.blueThemeReportTable .note {
+	font-size:9px;
+}
+
+.blueThemeReportTable .noteAlert {
+	color:#F00;
+	font-size:9px;	
+}
+
 .blueThemeReportTable th {
 	padding:5px;
 	color:#FFFFFF;
